Prevent h3 horizontal rule causing horizontal page overflow/scrollbar (#1654)

--- a/assets/css/content/cheatsheet.css
+++ b/assets/css/content/cheatsheet.css
@@ -40,6 +40,7 @@
     margin: 0 0 1em;
     color: var(--main);
     font-weight: 400;
+    overflow: hidden;
   }
 
   .page-cheatmd h3.section-heading .hover-link {
@@ -55,18 +56,14 @@
 
   .page-cheatmd h3::after {
     content: "";
-    margin-left: var(--horizontal-space);
+    margin-left: calc(var(--horizontal-space) / 2);
     vertical-align: baseline;
     display: inline-block;
     width: 100%;
     height: 1px;
     margin-right: -100%;
     margin-bottom: 5px;
-    background: linear-gradient(
-      to right,
-      rgba(116, 95, 181, .2),
-      transparent 80%
-    );
+    background-color: var(--codeBorder);
   }
 
   /* h4 */
